# structured_data_eval_harness_boiler_plate

./: .env.example  LICENSE  README.md  pyproject.toml
data/: README.md  create_excel_files.py  create_test_data.py  generated_data.csv  generated_data.xlsx  ground_truth.csv  ground_truth.xlsx
eval_harness/: __init__.py  evaluation_notebook.ipynb  evaluation_results.csv  evaluator.py
tests/: __init__.py  test_data_loader.py  test_evaluator.py  test_nlp_metrics.py
utils/: __init__.py  create_test_data.py  data_loader.py  nlp_metrics.py
